# qloo

./: main.py  pyproject.toml
server/: client.py  qloo.json  qloo.py  weather.json
